Fix seedArea spacing

--- a/app/style/CreateWalletForm.less
+++ b/app/style/CreateWalletForm.less
@@ -247,10 +247,13 @@
   }
 }
 
+.confirm-seed-row > .seedArea {
+  margin: -28px 5px 5px 5px;
+}
+
 .seedArea {
   float: left;
-  margin: 0px 5px 5px 5px;
-  width: 600px;
+  margin: 0px 5px 5px -5px;
 
   .Select-arrow-zone {
     width: 0px;
