--- a/app/style/GetStarted.less
+++ b/app/style/GetStarted.less
@@ -212,7 +212,6 @@
 
   .content-text {
     font-size: 13px;
-    height: 250px;
 
     .bold {
       font-weight: 600;
